# image-modernizer

./: CHANGELOG.md  LICENSE  README.md  image_modernizer.py  installer.nsi  png_to_webp_converter.py  pyproject.toml
.github/workflows/: build.yaml
