[tool.poetry]
name = "png-to-webp-converter"
version = "0.1.0"
description = ""
authors = ["orencohendev <oren@orencreates.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Pillow = "^9.5.0"
pyinstaller = "^5.12.0"
ttkbootstrap = "^1.10.1"
tk = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
